<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>vdmj</artifactId>
	<name>VDMJ</name>
	
	<parent>
		<groupId>dk.au.ece.vdmj</groupId>
		<artifactId>vdmj-suite</artifactId>
		<version>${revision}${sha1}${changelist}</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<properties>
		<maven.build.timestamp.format>yyMMdd</maven.build.timestamp.format>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<developers>
		<developer>
			<id>NickBattle</id>
			<name>Nick Battle</name>
			<email>nick.battle@gmail.com</email>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
							<archive>
								<manifestEntries>
									<Main-Class>com.fujitsu.vdmj.VDMJ</Main-Class>
									<Implementation-Version>${project.version} build ${maven.build.timestamp}</Implementation-Version>
									<Class-Path>.</Class-Path>
								</manifestEntries>
							</archive>
							<finalName>
								${project.artifactId}-${project.version}-${maven.build.timestamp}
							</finalName>
						</configuration>
					</execution>
                    <execution>
                        <id>documentation</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classesDirectory>${basedir}</classesDirectory>
                            <includes>
                                <include>documentation/**.pdf</include>
                                <include>documentation/MESSAGES</include>
                                <include>documentation/UserGuideTests.zip</include>
                                <include>src/main/scripts/vdmsl.sh</include>
                            </includes>
                            <classifier>docs</classifier>
							<finalName>
								${project.artifactId}-${project.version}-${maven.build.timestamp}
							</finalName>
                        </configuration>
                    </execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}-${project.version}-${maven.build.timestamp}</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
